--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-	"builds": [
-		{
-			"src": "./server.ts",
-			"use": "@vercel/node"
-		}
-	],
-	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "/server.ts"
-		}
-	]
+	"rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
