--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
@@ -23,6 +24,7 @@
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.3",
+		"@types/cookie-parser": "^1.4.4",
 		"@types/cors": "^2.8.14",
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.17",
